feitas e implementadas rotas das imagens

--- a/pages/home.html
+++ b/pages/home.html
@@ -153,7 +153,7 @@
     <div class="container">
         <div class="body d-md-flex align-items-center justify-content-between">
             <div class="box-1 mt-md-0 mt-5">
-                <img src="../assets/figure.png"
+                <img src="/images/home/card"
                     class=" " alt="">
             </div>
             <div class=" box-2 d-flex flex-column h-100">
